force-app/main/default/objects/Access_Request_Line_Item__c/Access_Request_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Access Request Line Item</label>
    <nameField>
        <displayFormat>ARLI-{0000}</displayFormat>
        <label>Access Request Line Item#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>