force-app/main/default/objects/Access_Request_Line_Item__c/fields/Access_Dropped__c.field-meta.xml
<CustomField>
    <fullName>Access_Dropped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access Dropped Status</label>
    <type>Checkbox</type>
</CustomField>