force-app/main/default/objects/Access_Request_Line_Item__c/fields/Access_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Access_Request_ID__c</fullName>
    <label>Access Request ID</label>
    <referenceTo>Access_Request__c</referenceTo>
    <relationshipLabel>Access Request Line Items</relationshipLabel>
    <relationshipName>Access_Request_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>