force-app/main/default/objects/Access_Request_Line_Item__c/fields/Access_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Request_Type__c</fullName>
    <label>Access Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authentication</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Mainframes</fullName>
            </value>
            <value>
                <fullName>MYSQL</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Sybase</fullName>
            </value>
            <value>
                <fullName>Unix</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>