force-app/main/default/objects/Access_Request_Line_Item__c/fields/Access_Verified__c.field-meta.xml
<CustomField>
    <fullName>Access_Verified__c</fullName>
    <label>Access Verified Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>