force-app/main/default/objects/Access_Request_Line_Item__c/fields/ACR_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>ACR_Type_Other__c</fullName>
    <label>ACR Type Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>