force-app/main/default/objects/Access_Request_Line_Item__c/fields/Application_Access__c.field-meta.xml
<CustomField>
    <fullName>Application_Access__c</fullName>
    <label>Application Access</label>
    <length>50</length>
    <type>Text</type>
</CustomField>