force-app/main/default/objects/Access_Request_Line_Item__c/fields/Environment_Other__c.field-meta.xml
<CustomField>
    <fullName>Environment_Other__c</fullName>
    <label>Environment Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>