force-app/main/default/objects/Access_Request_Line_Item__c/fields/Request_Raised__c.field-meta.xml
<CustomField>
    <fullName>Request_Raised__c</fullName>
    <label>Request Raised</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>