force-app/main/default/objects/Access_Request_Line_Item__c/fields/Requested_User__c.field-meta.xml
<CustomField>
    <fullName>Requested_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested User</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Access Request Line Items</relationshipLabel>
    <relationshipName>Access_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>