force-app/main/default/objects/Access_Request_Line_Item__c/fields/Requested_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Requested_User_ID__c</fullName>
    <label>Requested User ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>