force-app/main/default/objects/Access_Request_Line_Item__c/fields/Requested_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Requested_User_Name__c</fullName>
    <formula>Requested_User__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested User Name</label>
    <type>Text</type>
</CustomField>