force-app/main/default/objects/Access_Request_Line_Item__c/fields/SOE__c.field-meta.xml
<CustomField>
    <fullName>SOE__c</fullName>
    <formula>Access_Request_ID__r.SOE__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOE</label>
    <type>Text</type>
</CustomField>